--- a/package.json
+++ b/package.json
@@ -1,2 +1,22 @@
-rm -f package-lock.json
-npm install
+{
+  "name": "moros-bot",
+  "version": "1.0.0",
+  "description": "Moros Discord Bot",
+  "main": "index.js",
+  "type": "commonjs",
+  "engines": { "node": ">=20.18.1" },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "node index.js"
+  },
+  "dependencies": {
+    "discord.js": "^14.16.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "@discordjs/voice": "^0.16.1",
+    "ytdl-core": "^4.11.5",
+    "yt-search": "^2.12.1",
+    "ffmpeg-static": "^5.2.0",
+    "prism-media": "^1.3.5"
+  }
+}
