--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "moros-bot",
+  "name": "discord-staff-bot",
   "version": "1.0.0",
-  "description": "Moros Discord Bot",
+  "description": "Bot de moderación, alertas y bienvenida para Discord",
   "main": "index.js",
-  "type": "commonjs",
-  "engines": { "node": ">=20.18.1" },
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "nodemon --watch index.js index.js"
   },
   "dependencies": {
-    "discord.js": "^14.16.3",
+    "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "@discordjs/voice": "^0.16.1",
-    "ytdl-core": "^4.11.5",
-    "yt-search": "^2.12.1",
-    "ffmpeg-static": "^5.2.0",
-    "prism-media": "^1.3.5"
-  }
+    "express": "^4.21.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "discord",
+    "bot",
+    "moderation",
+    "welcome",
+    "alerts",
+    "staff"
+  ],
+  "author": "TuNombreAquí",
+  "license": "MIT"
 }
